--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     implementation 'org.postgresql:postgresql:42.5.1'
+    testImplementation group: 'com.opentable.components', name: 'otj-pg-embedded', version: '0.13.3'
 }
 
 test {
