--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,16 @@ repositories {
 }
 
 dependencies {
+    //Spring Core
+    implementation("org.springframework:spring-core:6.0.3")
+    implementation("org.springframework:spring-context:6.0.3")
+    implementation("org.springframework:spring-jdbc:6.0.3")
+
+    // Postgresql driver
+    runtimeOnly 'org.postgresql:postgresql:42.5.1'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-    implementation 'org.postgresql:postgresql:42.5.1'
     testImplementation group: 'com.opentable.components', name: 'otj-pg-embedded', version: '0.13.3'
 }
 
